# werkzeugkasten

./: .gitignore  README.md  ai-research  ai-research-table  project.yml  pyproject.toml  requirements.txt  summarize-file
.codex/: config.toml
Config/: WerkzeugkastenActionExtension-Info.plist  WerkzeugkastenApp-Info.plist
ShortcutShelf.xcodeproj/: project.pbxproj
Shortcuts.xcodeproj/: project.pbxproj
ShortcutsActionExtension/: ActionRequestHandler.swift
ShortcutsApp/: AppViews.swift  ShortcutsMenuBarApp.swift
ShortcutsCore/: EngineModels.swift  EngineRunner.swift  SettingsStore.swift  SharedConstants.swift
ShortcutsCoreTests/: ShortcutsCoreTests.swift
Werkzeugkasten.xcodeproj/: project.pbxproj
WerkzeugkastenActionExtension/: ActionRequestHandler.swift
WerkzeugkastenApp/: AppViews.swift  SummarizeSession.swift  WerkzeugkastenMenuBarApp.swift  WindowCoordinator.swift
WerkzeugkastenCore/: EngineModels.swift  EngineRunner.swift  FinderActionHandoff.swift  InputNormalizer.swift  KeychainStore.swift  NotificationHelper.swift  SettingsStore.swift  SharedConstants.swift
WerkzeugkastenCoreTests/: WerkzeugkastenCoreTests.swift
WerkzeugkastenShelf.xcodeproj/: project.pbxproj
docs/: releasing.md
shortcuts_engine/: cli.py  core.py  legacy.py
tests/: test_shortcuts_engine.py  test_werkzeugkasten_engine.py
werkzeugkasten_engine/: __init__.py  cli.py  core.py  field_types.py  geocoding.py  io_ops.py  notion_export.py  openai_ops.py  research_list.py  research_table.py  rest_server.py  services.py  summarize.py  summary_service.py
(+52 files in other folders)
